fixed overlapping div issue with mobile ver now viewable

--- a/src/components/Mobile/App.css
+++ b/src/components/Mobile/App.css
@@ -156,6 +156,7 @@ height: 50px;
     background-color: rgb(13, 53, 99);
     margin-left: auto;
     margin-right: auto;
+    position: relative;
   }
 
   #resumemoboileimp {
