--- a/src/components/Mobile/components/aboutme.css
+++ b/src/components/Mobile/components/aboutme.css
@@ -29,6 +29,7 @@
   overflow: auto;
   width: 97%;
   height: 97%;
+  position: relative;
 }
 
 #abtme {
